# mola

./: .gitignore  README.md  pyproject.toml
benchmark/: current-architecture-reference-routed-validation-r3.json
devtools/: apply_mlx_lm_detached_batch_api.py  run_mola_current_architecture.py  run_mola_winner.py
research/: first-kernel-contract.md  kernel-roadmap.md  live-mixed-decode-prototype.md  sources.md
scripts/: bench_routed_delta.py  bench_routed_kernel_lab.py  bench_server.py  e2e_test.py  prepare_data.py  test_concurrent.py
src/mola/: __init__.py  adapter.py  cli.py  context.py  diagnostics.py  engine.py  lora.py  model.py  server.py
src/mola/application/: admission.py  decode_owner.py  packing.py  routed_decode.py  scheduling.py
src/mola/infrastructure/: gather_mm_routed_decode.py  metal_gather_routed_decode.py  metal_routed_decode.py  mlx_generator.py  routed_decode.py
src/mola/ports/: generator.py  routed_decode.py
tests/: test_adapter.py  test_admission.py  test_context.py  test_engine.py  test_gather_mm_routed_decode.py  test_lora.py  test_metal_gather_routed_decode.py  test_metal_routed_decode.py  test_mlx_generator.py  test_packing.py  test_routed_decode.py  test_run_mola_current_architecture.py  test_run_mola_winner.py  test_scheduling.py  test_server.py
